ilishaper 1.1.0 (2024-12-10)
-------------------------------
- add sender to XTF headersection (#2)

ilishaper 1.0.1 (2024-11-13)
-------------------------------
- ili2c-5.6.1

ilishaper 1.0.0 (2024-11-12)
-------------------------------
- support --deriveData
- ili2c-5.6.1+
- iox-ili-1.23.2

ilishaper 0.9.0 (2023-06-22)
-------------------------------
- initial coding/release