@@ -1,0 +1,21 @@
+[Basismodell]
+name=Derivatmodell
+issuer=mailto:test@host
+version=2023-01-01
+doc=Neu generiertes Modell
+filterModels=Text
+
+# INTERLIS-Expression aber mit der Einschränkung: 
+# Lässt sich pro Objekt (ohne Beizug anderer Objekte)
+# auswerten. Also ohne Role-Name in der Expression.
+[Basismodell.TopicT1.ClassA]
+filter=Text.startsWith("Attr1","079555")
+
+[Basismodell.TopicT1.ClassA.Attr1]
+ignore=true
+
+[Basismodell.TopicT1.ClassB]
+ignore=true
+
+[Basismodell.TopicT2]
+ignore=true
